<resources>
    <string name="app_name">SEISP Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_phone">Home</string>
    <string name="nombre">Name</string>
    <string name="telefono">Phone</string>
    <string name="consultar">View</string>
    <string name="enviar">Send</string>
    <string name="enviar2">Send2</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu_principal">Main Menu</string>
    <string name="opc_reg_partipantes">Participant Registration</string>
    <string name="opc_gen_visitas">Generate Visit</string>
    <string name="opc_cerrar_sesion">Close Session</string>
    <string name="visit_confirmed_success">Visit Confirmed</string>
    <string name="visit_confirmed_error">Error in Visit Confirmation</string>
    <string name="visit_missed_success">Patient missed their pending visit!</string>
    <string name="visit_missed_error">Error marking visit as missed!</string>
    <string name="login_usuario">User:</string>
    <string name="login_password">Password</string>
    <string name="login_logo">logo.jpg</string>
    <string name="login_ingresar">Login</string>
    <string name="confirm_log_visit">Confirm</string>
    <string name="opc_anterior">Before</string>
    <string name="opc_siguiente">Next</string>
    <string name="ingrese_doc_identidad">Identity Document</string>
    <string name="schedule_date">Schedule Date</string>
    <string name="end_window">End of Window</string>
    <string name="start_window">Start of Window</string>
    <string name="middle_window">Middle of Window</string>
    <string name="invalid_dni">Invalid DNI!</string>
    <string name="invalid_dob">Invalid date of birth!</string>
    <string name="nombres">Names:</string>
    <string name="number_missed">Number Missed</string>
    <string name="log_in_other">Log in another patient</string>
    <string name="missed">Missed Visits</string>
    <string name="ape_pat">1st Family name:</string>
    <string name="ape_mat">2nd Family name:</string>
    <string name="masculino">Male</string>
    <string name="sched_visit">Schedule Visit</string>
    <string name="log_visit">Log Visit</string>
    <string name="historia">History</string>
    <string name="femenino">Female</string>
    <string name="fecha_nacimiento">Birth Date:</string>
    <string name="txtLocal">Locale:</string>
    <string name="txtProject">Project:</string>
    <string name="txtProjects">Projects:</string>
    <string name="past_month">Past Month</string>
    <string name="patient_dash">Patient Dashboard</string>
    <string name="past_week">Past Week</string>
    <string name="future">Future</string>
    <string name="received">Received Visits</string>
    <string name="registration_success">Information stored successfully</string>
    <string name="total">Total</string>
    <string name="tipdoc_dni">DNI</string>
    <string name="tipdoc_otros">No document</string>
    <string name="accept_location">Record Location</string>
    <string name="accuracy">Accuracy</string>
    <string name="activity_not_found">No activity found to handle: %s</string>
    <string name="add_another">Add Group</string>
    <string name="add_another_repeat">Add another \"%s\" group?</string>
    <string name="add_more">Add more</string>
    <string name="add_repeat">Add a new \"%s\" group?</string>
    <string name="add_repeat_no">Do Not Add</string>
    <string name="advance">forward to\nnext\nprompt</string>
    <string name="altitude">Altitude</string>
    <string name="audio_file_error">No audio file was specified.</string>
    <string name="audio_file_invalid">File: %s is not a valid audio file.</string>
    <string name="backup">back to\nprevious\nprompt</string>
    <string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_loading_form">Cancel</string>
    <string name="cancel_location">Cancel</string>
    <string name="cancel_saving_form">Cancel</string>
    <string name="cannot_edit_completed_form">This form cannot be edited once it has been marked as complete. It may be encrypted.</string>
    <string name="capture_audio">Record Sound</string>
    <string name="capture_image">Take Picture</string>
    <string name="capture_video">Record Video</string>
    <string name="cell">Cell</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Password</string>
    <string name="change_server_url">Server URL</string>
    <string name="change_username">SeisP Username</string>
    <string name="check_gps">Check that your GPS is on.</string>
    <string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
    <string name="clear_answer">Remove response</string>
    <string name="clear_answer_ask">Remove This Response?</string>
    <string name="clear_answer_no">Cancel</string>
    <string name="completed_data">Complete (%s)</string>
    <string name="data">Saved Forms</string>
    <string name="data_saved_error">Sorry, form save failed!</string>
    <string name="data_saved_ok">Form successfully saved!</string>
    <string name="default_completed">Default to Finalized</string>
    <string name="default_completed_summary">Mark form as finalized by default</string>
    <string name="default_server_url">http://demo.sociosensalud.org.pe</string>
    <string name="delete_confirm">Delete %s form(s)?</string>
    <string name="delete_file">Delete Selected</string>
    <string name="delete_no">Do Not Delete</string>
    <string name="delete_repeat">Remove group</string>
    <string name="delete_repeat_ask">Remove This Group?</string>
    <string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
    <string name="delete_repeat_no">Cancel</string>
    <string name="delete_yes">Delete Forms</string>
    <string name="discard_answer">Remove response</string>
    <string name="discard_group">Remove group</string>
    <string name="district">District</string>
    <string name="dni_wrong_length">DNI must be 8 digits long!</string>
    <string name="dni_already_exists">That DNI has already been used!</string>
    <string name="download">Get Selected</string>
    <string name="download_forms_result">Download Result</string>
    <string name="downloading_data">Connecting to Server</string>
    <string name="do_not_change">Cancel</string>
    <string name="do_not_exit">Cancel</string>
    <string name="do_not_save">Ignore Changes</string>
    <string name="entering_repeat">Add Group</string>
    <string name="entering_repeat_ask">Add New Group?</string>
    <string name="enter_data">Fill Blank Form</string>
    <string name="enter_data_button">Fill Blank Form</string>
    <string name="enter_data_description">You are at the start of \"%s\". Swipe the screen as shown below to begin.</string>
    <string name="error_occured">Error Occurred</string>
    <string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
    <string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
    <string name="file_deleted_ok">%s form(s) successfully deleted!</string>
    <string name="file_delete_in_progress">Sorry, a form delete action is already in progress!</string>
    <string name="file_invalid">File: %s is invalid.</string>
    <string name="file_missing">File: %s is missing.</string>
    <string name="finished_disk_scan">Finished scanning. All forms loaded.</string>
    <string name="fingerprint_scanner_not_found">Fingerprint Scanner not found!</string>
    <string name="fingerprint_init_failed">Fingerprint initialization failed!</string>
    <string name="forms">Blank Forms</string>
    <string name="getting_location">Loading Location</string>
    <string name="get_barcode">Get Barcode</string>
    <string name="get_forms">Get Blank Form</string>
    <string name="get_location">Record Location</string>
    <string name="group_number">Group</string>
    <string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
    <string name="invalid_answer_error">Sorry, this response is invalid!</string>
    <string name="invalid_name">Invalid name!</string>
    <string name="invalid_paternal_last">Invalid paternal last name!</string>
    <string name="invalid_maternal_last">Invalid maternal last name!</string>
    <string name="jump_to_beginning">Go To Start</string>
    <string name="jump_to_end">Go To End</string>
    <string name="jump_to_previous">Go Up</string>
    <string name="latitude">Latitude</string>
    <string name="leave_repeat_yes">Do Not Add</string>
    <string name="leaving_repeat_ask">Add One More Group?</string>
    <string name="list_failed_with_error">Form listing failed. %s.</string>
    <string name="loading_form">Loading Form</string>
    <string name="load_remote_form_error">Error Getting Form List</string>
    <string name="localizer">Localize</string>
    <string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
    <string name="location_provider">Using %1$s provider. Please wait for greater accuracy.</string>
    <string name="location_accuracy">Accuracy is %1$s m</string>
    <string name="longitude">Longitude</string>
    <string name="main_menu">Main Menu</string>
    <string name="main_menu_details">Data collection made easier…</string>
    <string name="manage_files">Delete Saved Form</string>
    <string name="mark_finished">Mark form as finalized</string>
    <string name="noselect_error">Sorry, you have not selected any forms!</string>
    <string name="no_connection">No network connection available</string>
    <string name="no_items_display">Nothing available to display.</string>
    <string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
    <string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved forms before sending.</string>
    <string name="ok">OK</string>
    <string name="parse_error">Sorry, unable to parse form.</string>
    <string name="parse_legacy_formlist_failed">The server has not provided an available-forms document compatible with Aggregate 0.9.x. : %s</string>
    <string name="parse_openrosa_formlist_failed">The server has not provided an available-forms document compatible with the OpenRosa version 1.0 standard: %s</string>
    <string name="password">Password</string>
    <string name="play_audio">Play Sound</string>
    <string name="play_video">Play Video</string>
    <string name="please_wait">Please wait a few moments.</string>
    <string name="please_wait_long">Please wait. This could take a few minutes.</string>
    <string name="quit_application">Exit %s</string>
    <string name="quit_entry">Save Form and Exit</string>
    <string name="refresh">Refresh</string>
    <string name="replace_barcode">Replace Barcode</string>
    <string name="replace_location">Replace Location</string>
    <string name="status">Status</string>
    <string name="visit_history">%s\'s Visit History</string>
    <string name="address">Address</string>
    <string name="address_description">Description</string>
    <string name="region">Region</string>
    <string name="dni_document">DNI/Document:</string>
    <string name="time">Time</string>
    <string name="txtstartdate">Start Date:</string>
    <string name="province">Province</string>
    <string name="date">Date</string>
    <string name="first_name">First Name:</string>
    <string name="maternal_name">Maternal Name:</string>
    <string name="next_visit">Next Visit: </string>
    <string name="paternal_name">Paternal Name:</string>
    <string name="project">Project</string>
    <string name="search_patient">Search for Patient</string>
    <string name="sexo">Gender:</string>
</resources>