<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="org.ses.android.soap.widgets.RegisterParticipantLayout">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- DNI/document -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <EditText
                android:id="@+id/edt_dni_document"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/dni_document"
                android:inputType="text" />

            <!-- Name, Birth Date, Sex -->

            <EditText
                android:id="@+id/edt_first_name"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edt_maternal_name"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:layout_weight="1"
                android:hint="@string/maternal_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edt_paternal_name"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:layout_weight="1"
                android:hint="@string/paternal_name"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_nacimiento" />

            <TextView
                android:id="@+id/edt_dob"
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:text=""/>

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo" />

            <RadioGroup android:id="@+id/rbg_gender"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <RadioButton
                    android:id="@+id/rbo_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rbo_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femenino"
                    android:textSize="14sp" />

            </RadioGroup>

            <!-- additional info -->

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sp_department"
                android:layout_weight="1"
                android:clickable="true"
                android:spinnerMode="dialog"
                android:dropDownWidth="fill_parent"
                android:contentDescription="@string/region" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sp_province"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                android:clickable="true"
                android:dropDownWidth="fill_parent"
                android:contentDescription="@string/province"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sp_district"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                android:clickable="true"
                android:dropDownWidth="fill_parent"
                android:contentDescription="@string/district"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_domicilio"
                android:layout_weight="1"
                android:inputType="textLongMessage"
                android:hint="@string/address"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_referencia"
                android:layout_weight="1"
                android:inputType="textLongMessage"
                android:hint="@string/address_description" />

            <EditText
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edt_telefono"
                android:layout_weight="0.31"
                android:hint="@string/home_phone"/>

            <EditText
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edt_celular"
                android:layout_weight="0.31"
                android:hint="@string/cell"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout3"
                android:layout_alignParentLeft="true">

                <EditText
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edt_localizac"
                    android:singleLine="false"
                    android:hint="@string/localizer"/>

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/btn_gps"
                    android:background="@drawable/gps_icon" />

            </LinearLayout>

            <EditText
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:inputType="text|number"
                android:ems="10"
                android:id="@+id/edt_long"
                android:singleLine="false"
                android:enabled="false"
                android:editable="false"
                android:hint="@string/longitude"/>

            <EditText
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:inputType="text|number"
                android:ems="10"
                android:id="@+id/edt_lat"
                android:singleLine="false"
                android:editable="false"
                android:hint="@string/latitude"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Guardar"
                    android:background="@drawable/botonblanco"
                    android:id="@+id/btn_guardar"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
