<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/txt_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_weight="1"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_maternal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maternal_name" />

        <EditText
            android:id="@+id/edt_maternal_name"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_weight="1"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_paternal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paternal_name" />

        <EditText
            android:id="@+id/edt_paternal_name"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_weight="1"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dni_document" />


        <EditText
            android:id="@+id/edt_dni"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_weight="1"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project" />


        <EditText
            android:id="@+id/edt_project"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_weight="1"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txt_assign_msg"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="21sp"
            android:background="@drawable/botonblanco"
            android:text="@string/search_patient" />



    </LinearLayout>


</RelativeLayout>